--- a/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.html
+++ b/src/app/pages/ncs/create-prop/create-prop-stepper/create-prop-stepper.component.html
@@ -8,7 +8,7 @@
                     [disabled]="isFirstStep()"
             >
                 <i class="pi pi-arrow-left"></i>
-                Voltar
+                {{'global.back'| translate}}
             </button>
         </div>
         <div class="stepper">
