--- a/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step4/notification.component.html
@@ -2,15 +2,15 @@
 <div class="d-flex">
   <div class="col-8">
     <div class="cabecalho">
-      <h1>Emitir Notificações</h1>
+      <h1>{{'global.contacts.title'| translate}}</h1>
       <p>
-        Visualize os contatos a serem notificados acerca do andamento desta NC. Por padrão, são adicionados contatos já incluidos nos passos anteriores.
+        {{'global.contacts.subtitle'| translate}}
       </p>
     </div>
   </div>
   <div class="col-4 d-flex justify-content-end align-items-center">
     <button iconPos="right" class="btn btn-dark" (click)="showAddContacts()">
-      Adicionar Contato<i class="pi pi-plus"></i>
+      {{'global.contacts.addBtn'| translate}}<i class="pi pi-plus"></i>
     </button>
   </div>
 </div>
@@ -19,9 +19,9 @@
   <p-table [value]="contactsCopy">
     <ng-template pTemplate="header">
       <tr>
-        <th>Nome</th>
-        <th>E-mail</th>
-        <th>Tipo de Contato</th>
+        <th>{{'global.contacts.name'| translate}}</th>
+        <th>{{'global.contacts.email'| translate}}</th>
+        <th>{{'global.contacts.partner'| translate}}</th>
         <th></th>
       </tr>
     </ng-template>
@@ -54,10 +54,9 @@
 <p-dialog [(visible)]="addContactsDialog" [modal]="true" styleClass="p-fluid">
   <ng-template pTemplate="header">
     <div>
-      <h2>Adicionar outros contatos</h2>
+      <h2>{{'global.contacts.addTitle'| translate}}</h2>
       <h3>
-        Adicione contatos de partes interessadas que serão notificadas acerca do
-        andamento desta NC
+        {{'global.contacts.addSubTitle'| translate}}
       </h3>
     </div>
   </ng-template>
@@ -65,7 +64,7 @@
     <div class="d-flex pb-2">
       <div class="col-9 pl-0">
         <p-autoComplete
-          placeholder="Busque por nome ou e-mail..."
+                [placeholder]="'global.contacts.search'| translate"
           [(ngModel)]="selectedContact"
           [suggestions]="results"
           (completeMethod)="search($event)"
@@ -80,11 +79,11 @@
               <span class="auto-complete-title">{{ contact.name }}</span>
               <div class="d-flex text-start">
                 <div>
-                  <span class="auto-complete-label">E-MAIL</span><br />
+                  <span class="auto-complete-label">{{'global.contacts.emailUpper'| translate}}</span><br />
                   <span class="auto-complete-item">{{ contact.email }}</span>
                 </div>
                 <div class="px-5">
-                  <span class="auto-complete-label">TIPO DE CONTATO</span><br />
+                  <span class="auto-complete-label">{{'global.contacts.partnerUpper'| translate}}</span><br />
                   <span class="auto-complete-item">{{ contact.type }}</span>
                 </div>
               </div>
@@ -97,20 +96,20 @@
         class="btn btn-dark col-3"
         (click)="createNewContact()"
       >
-        Criar Contato <i class="pi pi-user-plus"></i>
+        {{'global.contacts.create'| translate}} <i class="pi pi-user-plus"></i>
       </button>
     </div>
     <div class="d-flex mt-3">
       <i class="pi pi-users" style="font-size: 2rem"></i>
-      <h2>Contatos Selecionados</h2>
+      <h2>{{'global.contacts.selected'| translate}}</h2>
     </div>
     <div class="card">
       <p-table [value]="selectedContacts">
         <ng-template pTemplate="header">
           <tr>
-            <th>Nome</th>
-            <th>E-mail</th>
-            <th>Tipo de Contato</th>
+            <th>{{'global.contacts.name'| translate}}</th>
+            <th>{{'global.contacts.email'| translate}}</th>
+            <th>{{'global.contacts.partner'| translate}}</th>
             <th></th>
           </tr>
         </ng-template>
@@ -140,7 +139,7 @@
         class="btn btn-outline-dark"
         (click)="hideAddContacts()"
       >
-        Cancelar
+        {{'global.cancel'| translate}}
       </button>
       <button
         type="button"
@@ -148,7 +147,7 @@
         [disabled]="selectedContacts.length == 0"
         (click)="saveSelection()"
       >
-        Adicionar Contatos <i class="pi pi-plus"></i>
+        {{'global.contacts.save'| translate}} <i class="pi pi-plus"></i>
       </button>
     </div>
   </ng-template>
