--- a/src/app/pages/ncs/about/proposal/proposal.component.html
+++ b/src/app/pages/ncs/about/proposal/proposal.component.html
@@ -1,6 +1,6 @@
 
     <div *ngIf="aboutService.hasProposal()">
-        <div class="d-flex flex-row justify-content-end edit-button mb-2"><button class="btn btn-dark btn-md" (click)="goPlaces()">Editar <i class="bi bi-pencil-fill ml-1"></i></button></div>
+        <div class="d-flex flex-row justify-content-end edit-button mb-2"></div>
         <div class="d-flex flex-lg-row flex-column justify-content-between">
             
             <div class="d-flex">
@@ -26,6 +26,7 @@
                     <i class="bi bi-arrows-collapse"></i>
                     {{'global.colapse'| translate}}
                 </button>
+                <button class="ml-2 btn btn-dark btn-sm" (click)="goPlaces()">Editar <i class="bi bi-pencil-fill ml-1"></i></button>
             </div>
         </div>
         <p-accordion [multiple]="true">
