--- a/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
+++ b/src/app/pages/ncs/about/sgq-evaluation/sgq-evaluation.component.html
@@ -63,8 +63,8 @@
                 <i class="bi bi-arrows-collapse"></i>
                 {{'global.colapse'| translate}}
             </button>
-            <button class="btn btn-dark btn ml-3" routerLink="../../sgq/{{id}}">
-                Editar Avaliação
+            <button class="btn btn-dark btn-sm ml-3" routerLink="../../sgq/{{id}}">
+                {{'about.sgqEvalComponent.editBtn'| translate}}
                 <i class="bi bi-pencil-square"></i>
             </button>
         </div>
