--- a/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
+++ b/src/app/pages/ncs/about/view-nc/products-and-points/view-products-and-points.component.html
@@ -1,9 +1,9 @@
 <div class="div-ident-parceiro row">
-  <h1 class="titulo-parceiro">Dados do Produto</h1>
+  <h1 class="titulo-parceiro">{{'newNC.step1.product.title'| translate}}</h1>
   <div class="dados-parceiro col razao-social">
     <div class="d-flex">
       <h2 class="mr-2">
-        {{aboutSrvc.nc?.product?.name||"Dado não preenchido"}}
+        {{aboutSrvc.nc?.product?.name||'global.dontApply'| translate}}
       </h2>
       <p-chip>
         <i class="bi bi-ticket-perforated mr-2"></i>
@@ -11,18 +11,15 @@
       </p-chip>
     </div>
     <p class="d-block">
-      {{aboutSrvc.nc?.product?.description||"Dado não preenchido"}}
+      {{aboutSrvc.nc?.product?.description||'global.dontApply'| translate}}
     </p>
   </div>
   <div class="dados-parceiro col">
     <div class="dados-contato">
-      <div class="d-flex justify-content-between">
-        <h2>Dados de NC</h2>
-      </div>
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">Quantidade Total</span>
+          <span class="info-titulo">{{'newNC.step1.product.amount'| translate}}</span>
           <br />
           <span class="info-dados">{{aboutSrvc.nc?.quant_total||"0"}}</span>
         </div>
@@ -30,7 +27,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-calculator"></i>
         <div>
-          <span class="info-titulo">Quantidade em Não Conformidade</span>
+          <span class="info-titulo">{{'newNC.step1.product.amountNC'| translate}}</span>
           <br />
           <span class="info-dados">{{aboutSrvc.nc?.quant_nc||"0"}}</span>
         </div>
@@ -38,7 +35,7 @@
       <div class="contato-info d-flex flex-row">
         <i class="bi bi-percent"></i>
         <div>
-          <span class="info-titulo">Percentual</span>
+          <span class="info-titulo">{{'newNC.step1.product.percent'| translate}}</span>
           <br />
           <span class="info-dados">{{getPercent()||"0"}}%</span>
         </div>
@@ -49,21 +46,21 @@
 <div class="div-ident-parceiro mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    Ponto de Controle
+    {{'newNC.review.checkpoint'| translate}}
   </h2>
   <div class="d-flex">
     <div class="col-6 d-flex flex-row">
       <i class="pi pi-directions mr-1"></i>
       <div>
         <span class="info-titulo">{{
-          aboutSrvc.nc?.tipo_controle || "Dado não preenchido"
+          aboutSrvc.nc?.tipo_controle || 'global.empty'| translate
           }}</span>
       </div>
     </div>
     <div class="d-flex flex-row" *ngIf="aboutSrvc.nc?.tipo_controle!='PR'">
       <i class="bi bi-calculator mr-1"></i>
       <div >
-        <span class="info-titulo">Número</span>
+        <span class="info-titulo">{{'global.number'| translate}}</span>
         <br />
         <p class="info-dados">
           {{
@@ -77,13 +74,13 @@
 <div class="div-ident-parceiro pr-4 mt-3">
   <h2>
     <i class="bi bi-people"></i>
-    Ponto de Rejeição
+    {{'newNC.step1.rejectionPoint.title'| translate}}
   </h2>
   <div class="d-flex dados-contato mb-3 ">
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_lote">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Número do Lote</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numBatch'| translate}}</span>
         <br />
         <span class="info-dados">{{
           aboutSrvc.nc?.num_lote || "0"
@@ -93,7 +90,7 @@
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.num_ordem_compra">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Quantidade em Não Conformidade</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.numOC'| translate}}</span>
         <br />
         <span class="info-dados">{{
           aboutSrvc.nc?.num_ordem_compra || "0"
@@ -105,17 +102,17 @@
       <div>
         <span class="info-titulo">IT</span>
         <br />
-        <span class="info-dados">{{ "Numero: " + aboutSrvc.nc?.instruction?.code || "0" }}</span>
+        <span class="info-dados">{{ ('global.number'| translate) + ": " + aboutSrvc.nc?.instruction?.code || "0" }}</span>
         <br />
-        <span class="info-dados">{{ "Descrição: " + aboutSrvc.nc?.instruction?.description || "0" }}</span>
+        <span class="info-dados">{{ ('global.description'| translate) + ": " + aboutSrvc.nc?.instruction?.description || "0" }}</span>
         <br />
-        <span class="info-dados">{{ "Revisão: " + aboutSrvc.nc?.instruction?.rev || "0" }}</span>
+        <span class="info-dados">{{ ('global.revision'| translate) + ": "+ aboutSrvc.nc?.instruction?.rev || "0" }}</span>
       </div>
     </div>
     <div class="contato-info d-flex flex-row mb-5 mr-5" *ngIf="aboutSrvc.nc?.procedure">
       <i class="bi bi-123"></i>
       <div>
-        <span class="info-titulo">Número PR</span>
+        <span class="info-titulo">{{'newNC.step1.rejectionPoint.it'| translate}}</span>
         <br />
         <span class="info-dados">{{ aboutSrvc.nc?.procedure?.code|| "0" }}</span>
       </div>
