--- a/src/app/pages/ncs/about/view-nc/view-nc.component.html
+++ b/src/app/pages/ncs/about/view-nc/view-nc.component.html
@@ -2,9 +2,9 @@
   <div class="d-flex">
     <div class="cabecalho">
       <div class="d-flex align-items-center">
-        <h1 class="mr-3">Informações da NC</h1>
+        <h1 class="mr-3">{{'about.ncView.title'| translate}}</h1>
       </div>
-      <p>Visualize os detalhes cadastrados nesta NC.</p>
+      <p>{{'about.ncView.subtitle'| translate}}</p>
     </div>
   </div>
   <div class="d-flex justify-content-end align-items-center mb-3">
@@ -14,7 +14,7 @@
       (click)="isAllOpen = true"
     >
       <i class="bi bi-arrows-expand"></i>
-      Expandir Todos
+      {{'global.expand'| translate}}
     </button>
     <button
       [class]="isAllOpen ? unselectedClass : selectedClass"
@@ -22,10 +22,10 @@
       class="btn-sm"
     >
       <i class="bi bi-arrows-collapse"></i>
-      Colapsar Todos
+      {{'global.colapse'| translate}}
     </button>
-    <button class="btn btn-dark btn ml-3">
-      Editar NC
+    <button class="btn btn-dark btn-sm ml-2">
+      {{'about.ncView.editBtn'| translate}}
       <i class="bi bi-pencil-square"></i>
     </button>
   </div>
@@ -36,7 +36,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-          Dados da NC
+          {{'global.ncData'| translate}}
         </p>
       </div>
     </ng-template>
@@ -51,7 +51,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-box-seam"></i>
-          Descrição
+          {{'global.description'| translate}}
         </p>
       </div>
     </ng-template>
@@ -60,7 +60,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2">
             <i class="bi bi-file-earmark-text"></i>
-            Descrição da Não Conformidade
+            {{'about.ncView.description'| translate}}
           </h2>
           <p-editor
             [style]="{ height: '144px', border: '1px solid #dddddd', 'font-size': '20px' }"
@@ -73,7 +73,7 @@
         <div class="dados-parceiro razao-social item">
           <h2 class="mr-2 mb-5">
             <i class="pi pi-camera"></i>
-            Evidencias fotográficas
+            {{'newNC.review.evidence'| translate}}
           </h2>
           <p-carousel
             [value]="this.aboutSrvc.nc?.attachments?.filter(isType1) || []"
@@ -95,7 +95,7 @@
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2">
       <i class="bi bi-geo"></i>
-      Descrição de Ações Imediatas
+      {{'newNC.step2.actionsTitle'| translate}}
     </h2>
     <p-editor [style]="{'height':'144px', border: '1px solid #dddddd', 'font-size': '20px' }" [readonly]="true" [ngModel]="aboutSrvc.nc?.text_area_acoes">
       <ng-template pTemplate="header" hidden>
@@ -105,7 +105,7 @@
   <div class="dados-parceiro razao-social item">
     <h2 class="mr-2 mb-5">
       <i class="pi pi-camera"></i>
-      Evidencias fotográficas
+      {{'newNC.review.evidence'| translate}}
     </h2>
     <p-carousel [value]="this.aboutSrvc.nc?.attachments?.filter(isType2) || []" [numVisible]="3" [numScroll]="3" [showIndicators]="false">
       <ng-template let-file pTemplate="item">
@@ -124,7 +124,7 @@
       <div class="d-flex justify-content-between accordion">
         <p>
           <i class="bi bi-file-earmark-text"></i>
-            Notificações por E-mail
+          {{'global.contacts.notifications'| translate}}
         </p>
       </div>
     </ng-template>
