--- a/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step1/ishikawa-diagram.component.html
@@ -1,13 +1,13 @@
 <div class="d-flex flex-lg-row flex-column justify-content-between">
     <div class="cabecalho">
-        <h1 class="mr-3">Diagrama de Ishikawa</h1>
+        <h1 class="mr-3">{{ "about.proposalComponent.ishikawaDiagram" | translate }}</h1>
         <p>
-            Descreva o problema referente aos respectivos campos de acordo com o Diagrama de Causa e Efeito - Ishikawa.
+            {{ "createProp.step1.subtitle" | translate }}
         </p>
     </div>
     <div class="d-flex justify-content-end align-items-center mb-3">
         <button class="btn btn-dark ml-3">
-            Visualizar Descrição da NC
+            {{ "createProp.step1.descBtn" | translate }}
             <i class="bi bi-file-earmark-medical"></i>
         </button>
     </div>
@@ -16,7 +16,7 @@
     <div>
         <div class="d-flex">
             <div class="col">
-                <label>Matéria Prima</label>
+                <label>{{'about.proposalComponent.material'| translate}}</label>
                 <p-editor [ngModel]="'<p>'+this.propService.propSolution.lack_materials + '</p><p>' + this.propService.propSolution.excess_materials + '</p><p>' + this.propService.propSolution.low_quality_materials + '</p>' + '</p>' + this.propService.propSolution.material_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(1)">
                     <ng-template pTemplate="header">
                     </ng-template>
@@ -24,14 +24,14 @@
 
             </div>
             <div class="col">
-                <label>Medição</label>
+                <label>{{'about.proposalComponent.measure'| translate}}</label>
                 <p-editor [ngModel]="'<p>'+this.propService.propSolution.lack_parameters + '</p><p>' + this.propService.propSolution.excess_parameters + '</p><p>' + this.propService.propSolution.non_achievement_goals + '</p>' +  '</p>' + this.propService.propSolution.measurement_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(2)">
                     <ng-template pTemplate="header">
                     </ng-template>
                 </p-editor>
             </div>
             <div class="col">
-                <label>Método</label>
+                <label>{{'about.proposalComponent.method'| translate}}</label>
                 <p-editor [ngModel]="this.propService.propSolution.method_description + '<p>' + returnString(this.propService.propSolution.instruction) + '</p>'+ '<p>' + returnString(this.propService.propSolution.procedure) + '</p>'+ '<p>' + returnString(this.propService.propSolution.regulatory) + '</p>'+ '<p>' + returnString(this.propService.propSolution.nbr) + '</p>'" [style]="editorStyle" [readonly]="true" (click)="openDialog(3)">
                     <ng-template pTemplate="header">
                     </ng-template>
@@ -45,27 +45,27 @@
                 <p-editor [ngModel]="'<p>'+this.propService.propSolution.run_training + '</p>' + this.propService.propSolution.man_power_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(4)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor><label class="mt-1">Mão de Obra</label>
+                </p-editor><label class="mt-1">{{'about.proposalComponent.labor'| translate}}</label>
             </div>
             <div class="col">
                
                 <p-editor [ngModel]="this.propService.propSolution.environment_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(5)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor><label class="mt-1">Meio Ambiente</label>
+                </p-editor><label class="mt-1">{{'about.proposalComponent.ambient'| translate}}</label>
             </div>
             <div class="col">
                 
                 <p-editor [ngModel]="this.propService.propSolution.machine_description" [style]="editorStyle" [readonly]="true" (click)="openDialog(6)">
                     <ng-template pTemplate="header">
                     </ng-template>
-                </p-editor><label class="mt-1">Máquina</label>
+                </p-editor><label class="mt-1">{{'about.proposalComponent.machine'| translate}}</label>
 
             </div>
         </div>
     </div>
     <div class="d-block mt-5">
-        <label>Efeito</label>
+        <label>{{'about.proposalComponent.effect'| translate}}</label>
         <p-editor [ngModel]="this.propService.propSolution.effect_description"
                   [style]="{'height':'300px','width':'230px','border': '2px solid #333333','border-radius': '5px'}"
                   [readonly]="true"
