--- a/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.html
+++ b/src/app/pages/ncs/create-prop/steps/step3/action-plan-dialog/action-plan-dialog.component.html
@@ -1,16 +1,16 @@
 <div class="d-flex flex-column mr-lg-3 inputs-sm  mt-3">
-    <label>Descrição</label>
+    <label>{{'global.description'| translate}}</label>
     <input
             [(ngModel)]="action.description"
             name="amountNC"
             type="text"
             pInputText
-            placeholder="Digite"
+            [placeholder]="'global.type'| translate"
             class="p-input text-sm input"
     />
 </div>
 <div class="d-flex flex-column mr-lg-3 inputs-sm mt-3">
-    <label>Prazo</label>
+    <label>{{'global.deadline'| translate}}</label>
     <input
             type="date"
             pInputText
@@ -21,23 +21,23 @@
 </div>
 <div class="d-flex flex-column flex-lg-row">
     <div class="d-flex flex-column pl-0 inputs-sm col-6">
-        <label>Status</label>
+        <label>{{'global.status'| translate}}</label>
         <select class="form-select input" [(ngModel)]="action.status">
             <option disabled selected hidden>{{action.status}}</option>
             <option *ngFor="let status of statuses">{{ status }}</option>
         </select>
     </div>
     <div class="d-flex flex-column inputs-sm">
-        <label>Responsável</label>
+        <label>{{'global.responsible'| translate}}</label>
         <p-dropdown class="p-input input" [options]="propService.users" optionLabel="username" [(ngModel)]="action.responsible"></p-dropdown>
     </div>
 </div>
 <div class="d-flex justify-content-end mt-5">
     <button class="btn btn-outline-dark mr-3" (click)="close()">
-        Cancelar
+        {{'global.cancel'| translate}}
     </button>
     <button class="btn btn-dark" [disabled]="!action.name||!action.deadline||!action.responsible||!action.status" (click)="save()">
-        Confirmar
+        {{'global.confirm'| translate}}
         <i class="bi bi-check2"> </i>
     </button>
 </div>
